[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
#rmcp = { version = "0.8.0", features = ["server", "transport-io", "macros"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-io"] }
rmcp-macros = "0.1.5"
rust-mcp-transport = "=0.2.1"
schemars = "1.1.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
